(build) Spock 2, Groovy 3, remove illegal access warnings from Groovy